<resources>
    <string name="app_name">AcademiaHub</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_to_gp_cm_connect_register_here">New to GP CM Connect? Register here</string>
    <string name="register">Register</string>
    <string name="already_an_user_login_here">Already an user? Login here</string>
    <string name="select_designation">Select Designation</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="hello_user">Hello, User</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="add_event">Add Event</string>
    <string name="view_events">View Events</string>
    <string name="logout">Logout</string>
    <string name="view_users">View Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="events">Events</string>
    <string name="home">Home</string>
    <string name="firstname_lastname">FirstName LastName</string>
    <string name="example_google_com">example@google.com</string>
    <string name="banner_for_account">banner_for_Account</string>
    <string name="actions">Actions</string>
    <string name="about_us">About Us</string>
    <string name="follow_us_on">Follow us on</string>
    <string name="instagram">Instagram</string>
    <string name="linked_in">Linked In</string>
    <string name="github">GitHub</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="basic_actions">Basic Actions</string>
    <string name="syllabus">View Syllabus</string>
    <string name="completed_events">Completed</string>
    <string name="ongoing_events">Ongoing</string>
    <string name="new_event">Add New Event</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_category">Select Category</string>
    <string name="add_short_description">Add Short Description</string>
    <string name="designation">Designation:</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
</resources>