<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_us_icon"
            android:title="@string/about_us"/>

    </group>
    <item
        android:title="@string/follow_us_on">
        <menu>
            <item
                android:id="@+id/instagram"
                android:title="@string/instagram"
                android:icon="@drawable/instagram_icon" />
            <item
                android:id="@+id/linkedin"
                android:title="@string/linked_in"
                android:icon="@drawable/linkedin_icon" />
            <item
                android:id="@+id/github"
                android:title="@string/github"
                android:icon="@drawable/github_icon" />
        </menu>

    </item>
    <item
        android:title="@string/actions">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:onClick="logoutUser"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout" />
        </menu>

    </item>

</menu>