<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_fields"
        android:hint="@string/enter_full_name"
        android:padding="18sp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_fields"
        android:hint="@string/enter_user_name"
        android:padding="18sp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/input_fields"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="18sp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_fields"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="18sp"
        android:textSize="18sp" />

    <AutoCompleteTextView
        android:id="@+id/designation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_fields"
        android:hint="@string/select_designation"
        android:padding="18sp"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="gone" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:gravity="center"
        android:padding="15sp"
        android:text="@string/already_an_user_login_here"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:focusable="true" />

</LinearLayout>