<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="215dp"
    android:gravity="start"
    android:padding="16dp"
    android:paddingBottom="0dp"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="-30dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/account_image_icon"
        android:contentDescription="@string/banner_for_account" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstname_lastname"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_google_com"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>