<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:textSize="18sp"
        android:background="@drawable/input_fields"
        android:layout_marginTop="32dp"
        android:padding="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textWebPassword"
        android:textSize="18sp"
        android:background="@drawable/input_fields"
        android:layout_marginTop="16dp"
        android:padding="18sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="gone" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:gravity="center"
        android:padding="15sp"
        android:text="@string/new_to_gp_cm_connect_register_here"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:focusable="true" />

</LinearLayout>